ligolang/src/test/contracts/negative/parametric_types3.ligo
type foo(a,b,c) is a * b * c
type bar is foo(int)